--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seeders/seed.js"
+    "dev": "nodemon src/server.js",
+    "seed": "node src/seeders/seed.js",
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
