--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "seed": "node src/seeders/seed.js",
+    "seed": "npm sun seed && node src/seeders/seed.js",
     "start": "node src/server.js"
   },
   "repository": {
