--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "seed": "node src/seeders/seed.js",
-    "start": "node src/seeders/seed.js && node src/server.js"
+    "start": "npm run seed && node src/server.js"
   },
   "repository": {
     "type": "git",
